minor css fix so the using cookie message will be visible

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,6 +15,12 @@ html, body {
     color: $default-text-color
 }
 
+#appRootDiv, .app-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
